[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "haemorl-organ-allocation"
version = "4.0.0"
description = "RL-Based Smart Organ Allocation — OpenEnv compliant environment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "httpx==0.27.0",
    "openai==1.30.1",
    "python-multipart==0.0.9",
    "websockets==12.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
serve = "app:app"

[project.urls]
Homepage = "https://huggingface.co/spaces/thestoicrohit/haemorl"
Repository = "https://github.com/thestoicrohit/haemorl"

[tool.openenv]
name = "haemorl-organ-allocation"
version = "4.0.0"
tasks = ["single_match", "batch_allocation", "crisis_routing"]
entry_point = "app:app"
space_url = "https://huggingface.co/spaces/thestoicrohit/haemorl"
